force-app/main/default/objects/Maintenance_Part__c/fields/Maintenance_Request__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Request__c</fullName>
    <label>Maintenance Request</label>
    <referenceTo>Maintenance_Reuest__c</referenceTo>
    <relationshipLabel>Maintenance Parts</relationshipLabel>
    <relationshipName>Maintenance_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>