force-app/main/default/objects/Maintenance_Part__c/fields/Qty_Issued__c.field-meta.xml
<CustomField>
    <fullName>Qty_Issued__c</fullName>
    <label>Qty Issued</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>