force-app/main/default/objects/Maintenance_Part__c/fields/Qty_Return__c.field-meta.xml
<CustomField>
    <fullName>Qty_Return__c</fullName>
    <formula>Qty_Issued__c - Qty_Utilized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>