force-app/main/default/objects/Maintenance_Part__c/fields/Qty_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Qty_Utilized__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty Utilized</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>